k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ether
  name: ami-frontend
spec:
  selector:
    app: ami-frontend
  ports:
  - port: 80
    targetPort: 80
