k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ether
  name: ami-frontend-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ami.ether.paris
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ami-frontend
            port:
              number: 80
